--- a/app/src/main/res/xml/prefs.xml
+++ b/app/src/main/res/xml/prefs.xml
@@ -8,4 +8,12 @@
         android:entries="@array/pref_sort_entries"
         android:entryValues="@array/pref_sort_values"
         android:defaultValue="@string/pref_sort_default" />
+    <ListPreference
+        android:key="@string/pref_search_key"
+        android:title="@string/pref_search_title"
+        android:summary="%s"
+        android:dialogTitle="@string/pref_search_title"
+        android:entries="@array/pref_search_entries"
+        android:entryValues="@array/pref_search_values"
+        android:defaultValue="@string/pref_search_default" />
 </PreferenceScreen>
