Adding caching and layout tweaks

--- a/app/src/main/res/layout/activity_photo_detail.xml
+++ b/app/src/main/res/layout/activity_photo_detail.xml
@@ -45,9 +45,10 @@
         android:id="@+id/tv_date_upload"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView"
         android:paddingLeft="20dp"
-        android:paddingRight="20dp"/>
+        android:paddingRight="20dp"
+        android:text="TextView"
+        android:textSize="0sp" />
 
     <TextView
         android:id="@+id/tv_lat"
